--- a/.devcontainer/devcontainer/Dockerfile
+++ b/.devcontainer/devcontainer/Dockerfile
@@ -4,8 +4,10 @@ ARG VARIANT="1.17"
 FROM mcr.microsoft.com/vscode/devcontainers/go:0-${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+     && apt-get -y install --no-install-recommends nodejs iputils-ping 
 
-# [Optional] Uncomment the next line to use go get to install anything else you need
-# RUN go get -x <your-dependency-or-tool>
+# We need to be in the folder with the go package to run any go get's
+WORKDIR /root/workspace/src
+# PostgreSQL Driver
+RUN go get github.com/lib/pq
