User alteration & other optimizations
- New endpoint to update a user's preferences & credentials
- Removed CGO from build environment
- Removed redundant db pings
- Added a merge function to deduplication utils
- Better datatypes for database columns
   - TEXT instead of VARCHAR(n) as it allows easy refactoring later, and
     is recommended by Postgres. (and it's also not slower!)
   - JSONB instead of JSON as it allows a more efficient internal data
     structure, as opposed to just writing the raw text in there.
- Changed field "username" to simply "user" in all endpoints' payload.
- Removed repetetiveness in the db queries by implementing a helper
  function that performs the query most functions require.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,15 +1,12 @@
 {
 	// intrinsic name of the dev container
 	"name": "Go",
-
 	// the docker compose file (relative to .devcontainer)
 	"dockerComposeFile": [
 		"docker-compose.yml"
 	],
-
 	// run this service from the docker-compose file
 	"service": "devcontainer",
-
 	// VSCode extensions to install
 	"extensions": [
 		"golang.Go",
@@ -17,7 +14,6 @@
 		"mtxr.sqltools-driver-pg",
 		"rangav.vscode-thunder-client"
 	],
-
 	// set VSCode extension defaults
 	"settings": {
 		"go.toolsManagement.checkForUpdates": "local",
@@ -37,7 +33,10 @@
 			}
 		]
 	},
-
+	"remoteEnv": {
+		"CGO_ENABLED": "0",
+		"GOOS": "linux"
+	},
 	// wheer the files are in the container, this should be vol-mounted in the docker-compose file
 	"workspaceFolder": "/root/workspace",
 }
